Fixed misaligned headings

--- a/frontend/src/components/popups/popupTemplate/Popup.module.css
+++ b/frontend/src/components/popups/popupTemplate/Popup.module.css
@@ -48,18 +48,19 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
   margin-bottom: 16px;
 }
 
 .joinHeaderText {
   font-size: larger;
-  right: 50%;
-  transform: translateX(100%);
+  text-align: center;
 }
 
 .closeButton {
+  position: absolute;
+  right: 0;
   width: 30px;
   height: 30px;
 }
