--- a/frontend/src/components/tournamentList/TournamentList.module.css
+++ b/frontend/src/components/tournamentList/TournamentList.module.css
@@ -18,25 +18,26 @@
 
 .listHeader {
   width: 100%;
+  height: 20px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
 }
 
 .expandButton {
-  margin-right: auto;
+  position: absolute;
+  left: 0;
 }
 
 .headerText {
-  left: 50%;
-  transform: translateX(-50%);
   opacity: 0;
   transition: none;
   pointer-events: none;
+  text-align: center;
 }
 
-.open .headertext {
+.open .headerText {
   opacity: 1;
   transition: opacity 0.1s linear 0.1s;
   pointer-events: auto;
